bindings/c/include/xtreme3d.h

__declspec(dllimport) double LightGetAttenuation(double, double);
__declspec(dllimport) double LightGetShining(double);
/* lightfx.pas */
__declspec(dllimport) double LightFXCreate(double);
/* lines.pas */
__declspec(dllimport) double LinesCreate(double);
__declspec(dllimport) double LinesAddNode(double, double, double, double);
__declspec(dllimport) double LinesDeleteNode(double, double);
__declspec(dllimport) double LinesSetNode(double, double, double, double, double);
__declspec(dllimport) double LinesSetSize(double, double, double);
__declspec(dllimport) double LinesSetSplineMode(double, double);
__declspec(dllimport) double LinesSetNodesAspect(double, double);
__declspec(dllimport) double LinesSetDivision(double, double);
/* logger.pas */
__declspec(dllimport) double LoggerCreate(char*, double);
__declspec(dllimport) double LoggerEnable(double, double);
__declspec(dllimport) double LoggerLog(double, double, char*);
/* material.pas */
__declspec(dllimport) double MaterialLibraryCreate(void);
__declspec(dllimport) double MaterialLibraryActivate(double);
__declspec(dllimport) double MaterialLibrarySetTexturePaths(double, char*);
__declspec(dllimport) double MaterialLibraryClear(double);
__declspec(dllimport) double MaterialLibraryDeleteUnused(double);
__declspec(dllimport) double MaterialLibraryHasMaterial(double, char*);
__declspec(dllimport) double MaterialLibraryLoadScript(double, char*);
__declspec(dllimport) double MaterialLibraryGetTextureByName(double, char*);
__declspec(dllimport) double MaterialCreate(char*, char*);
__declspec(dllimport) double MaterialDestroy(char*);
__declspec(dllimport) double MaterialAddCubeMap(char*);
__declspec(dllimport) double MaterialCubeMapLoadImage(char*, char*, double);
__declspec(dllimport) double MaterialCubeMapGenerate(char*, double);
__declspec(dllimport) double MaterialCubeMapFromScene(char*, double, double, double);
__declspec(dllimport) double MaterialSetName(char*, char*);
__declspec(dllimport) double MaterialSetShininess(char*, double);
__declspec(dllimport) double MaterialSetAmbientColor(char*, double, double);
__declspec(dllimport) double MaterialSetDiffuseColor(char*, double, double);
__declspec(dllimport) double MaterialSetSpecularColor(char*, double, double);
__declspec(dllimport) double MaterialSetEmissionColor(char*, double, double);
__declspec(dllimport) double MaterialGetColor(char*, double);
__declspec(dllimport) double MaterialGetAlpha(char*, double);
__declspec(dllimport) double MaterialSetBlendingMode(char*, double);
__declspec(dllimport) double MaterialSetTextureMode(char*, double);
__declspec(dllimport) double MaterialSetTextureMappingMode(char*, double);
__declspec(dllimport) double MaterialSetPolygonMode(char*, double);
__declspec(dllimport) double MaterialSetTextureImageAlpha(char*, double);
__declspec(dllimport) double MaterialSetTextureScale(char*, double, double);
__declspec(dllimport) double MaterialSetTextureOffset(char*, double, double);
__declspec(dllimport) double MaterialSetTextureFilter(char*, double, double);
__declspec(dllimport) double MaterialEnableTexture(char*, double);
__declspec(dllimport) double MaterialGetCount(void);
__declspec(dllimport) char* MaterialGetName(double);
__declspec(dllimport) double MaterialSetFaceCulling(char*, double);
__declspec(dllimport) double MaterialSetSecondTexture(char*, char*);
__declspec(dllimport) double MaterialSetTextureFormat(char*, double);
__declspec(dllimport) double MaterialSetTextureFormatEx(char*, double);
__declspec(dllimport) double MaterialSetTextureCompression(char*, double);
__declspec(dllimport) double MaterialTextureRequiredMemory(char*);
__declspec(dllimport) double MaterialSetFilteringQuality(char*, double);
__declspec(dllimport) double MaterialSetShader(char*, double);