bindings/python3/xtreme3d/x3dfuncs.py


x3d.LightGetAttenuation.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LightGetAttenuation.restype = ctypes.c_double
def LightGetAttenuation(aLight, aIndex):
    return x3d.LightGetAttenuation(aLight, aIndex)

x3d.LightGetShining.argtypes = [ctypes.c_double]
x3d.LightGetShining.restype = ctypes.c_double
def LightGetShining(aLight):
    return x3d.LightGetShining(aLight)


# lightfx.pas
x3d.LightFXCreate.argtypes = [ctypes.c_double]
x3d.LightFXCreate.restype = ctypes.c_double
def LightFXCreate(aObj):
    return x3d.LightFXCreate(aObj)


# lines.pas
x3d.LinesCreate.argtypes = [ctypes.c_double]
x3d.LinesCreate.restype = ctypes.c_double
def LinesCreate(aParent):
    return x3d.LinesCreate(aParent)

x3d.LinesAddNode.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.LinesAddNode.restype = ctypes.c_double
def LinesAddNode(aLines, aX, aY, aZ):
    return x3d.LinesAddNode(aLines, aX, aY, aZ)

x3d.LinesDeleteNode.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LinesDeleteNode.restype = ctypes.c_double
def LinesDeleteNode(aLines, aInd):
    return x3d.LinesDeleteNode(aLines, aInd)

x3d.LinesSetNode.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.LinesSetNode.restype = ctypes.c_double
def LinesSetNode(aLines, aInd, aX, aY, aZ):
    return x3d.LinesSetNode(aLines, aInd, aX, aY, aZ)

x3d.LinesSetSize.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.LinesSetSize.restype = ctypes.c_double
def LinesSetSize(aLines, aLinewidth, aNodesize):
    return x3d.LinesSetSize(aLines, aLinewidth, aNodesize)

x3d.LinesSetSplineMode.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LinesSetSplineMode.restype = ctypes.c_double
def LinesSetSplineMode(aLines, aLsm):
    return x3d.LinesSetSplineMode(aLines, aLsm)

x3d.LinesSetNodesAspect.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LinesSetNodesAspect.restype = ctypes.c_double
def LinesSetNodesAspect(aLines, aLna):
    return x3d.LinesSetNodesAspect(aLines, aLna)

x3d.LinesSetDivision.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LinesSetDivision.restype = ctypes.c_double
def LinesSetDivision(aLines, aDivision):
    return x3d.LinesSetDivision(aLines, aDivision)


# logger.pas
x3d.LoggerCreate.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.LoggerCreate.restype = ctypes.c_double
def LoggerCreate(aFname, aLoglevel):
    return x3d.LoggerCreate(aFname, aLoglevel)

x3d.LoggerEnable.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.LoggerEnable.restype = ctypes.c_double
def LoggerEnable(aLogger, aMode):
    return x3d.LoggerEnable(aLogger, aMode)

x3d.LoggerLog.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_char_p]
x3d.LoggerLog.restype = ctypes.c_double
def LoggerLog(aLogger, aLoglevel, aMsg):
    return x3d.LoggerLog(aLogger, aLoglevel, aMsg)


# material.pas
x3d.MaterialLibraryCreate.argtypes = []
x3d.MaterialLibraryCreate.restype = ctypes.c_double
def MaterialLibraryCreate():
    return x3d.MaterialLibraryCreate()

x3d.MaterialLibraryActivate.argtypes = [ctypes.c_double]
x3d.MaterialLibraryActivate.restype = ctypes.c_double
def MaterialLibraryActivate(aMlib):
    return x3d.MaterialLibraryActivate(aMlib)

x3d.MaterialLibrarySetTexturePaths.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.MaterialLibrarySetTexturePaths.restype = ctypes.c_double
def MaterialLibrarySetTexturePaths(aMlb, aPath):
    return x3d.MaterialLibrarySetTexturePaths(aMlb, aPath)

x3d.MaterialLibraryClear.argtypes = [ctypes.c_double]
x3d.MaterialLibraryClear.restype = ctypes.c_double
def MaterialLibraryClear(aMlb):
    return x3d.MaterialLibraryClear(aMlb)

x3d.MaterialLibraryDeleteUnused.argtypes = [ctypes.c_double]
x3d.MaterialLibraryDeleteUnused.restype = ctypes.c_double
def MaterialLibraryDeleteUnused(aMlb):
    return x3d.MaterialLibraryDeleteUnused(aMlb)

x3d.MaterialLibraryHasMaterial.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.MaterialLibraryHasMaterial.restype = ctypes.c_double
def MaterialLibraryHasMaterial(aMatlib, aName):
    return x3d.MaterialLibraryHasMaterial(aMatlib, aName)

x3d.MaterialLibraryLoadScript.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.MaterialLibraryLoadScript.restype = ctypes.c_double
def MaterialLibraryLoadScript(aMatlib, aFilename):
    return x3d.MaterialLibraryLoadScript(aMatlib, aFilename)

x3d.MaterialLibraryGetTextureByName.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.MaterialLibraryGetTextureByName.restype = ctypes.c_double
def MaterialLibraryGetTextureByName(aMatlib, aName):
    return x3d.MaterialLibraryGetTextureByName(aMatlib, aName)

x3d.MaterialCreate.argtypes = [ctypes.c_char_p, ctypes.c_char_p]
x3d.MaterialCreate.restype = ctypes.c_double
def MaterialCreate(aMtrl, aFname):
    return x3d.MaterialCreate(aMtrl, aFname)

x3d.MaterialDestroy.argtypes = [ctypes.c_char_p]
x3d.MaterialDestroy.restype = ctypes.c_double
def MaterialDestroy(aMtrl):
    return x3d.MaterialDestroy(aMtrl)

x3d.MaterialAddCubeMap.argtypes = [ctypes.c_char_p]
x3d.MaterialAddCubeMap.restype = ctypes.c_double
def MaterialAddCubeMap(aMtrl):
    return x3d.MaterialAddCubeMap(aMtrl)

x3d.MaterialCubeMapLoadImage.argtypes = [ctypes.c_char_p, ctypes.c_char_p, ctypes.c_double]
x3d.MaterialCubeMapLoadImage.restype = ctypes.c_double
def MaterialCubeMapLoadImage(aMtrl, aFilename, aInd):
    return x3d.MaterialCubeMapLoadImage(aMtrl, aFilename, aInd)

x3d.MaterialCubeMapGenerate.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialCubeMapGenerate.restype = ctypes.c_double
def MaterialCubeMapGenerate(aMtrl, aRes):
    return x3d.MaterialCubeMapGenerate(aMtrl, aRes)

x3d.MaterialCubeMapFromScene.argtypes = [ctypes.c_char_p, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.MaterialCubeMapFromScene.restype = ctypes.c_double
def MaterialCubeMapFromScene(aMtrl, aViewer, aCamera, aRes):
    return x3d.MaterialCubeMapFromScene(aMtrl, aViewer, aCamera, aRes)

x3d.MaterialSetName.argtypes = [ctypes.c_char_p, ctypes.c_char_p]
x3d.MaterialSetName.restype = ctypes.c_double
def MaterialSetName(aMtrl, aName):
    return x3d.MaterialSetName(aMtrl, aName)

x3d.MaterialSetShininess.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialSetShininess.restype = ctypes.c_double
def MaterialSetShininess(aMtrl, aShin):
    return x3d.MaterialSetShininess(aMtrl, aShin)

x3d.MaterialSetAmbientColor.argtypes = [ctypes.c_char_p, ctypes.c_double, ctypes.c_double]
x3d.MaterialSetAmbientColor.restype = ctypes.c_double
def MaterialSetAmbientColor(aMtrl, aCol, aAlpha):
    return x3d.MaterialSetAmbientColor(aMtrl, aCol, aAlpha)

x3d.MaterialSetDiffuseColor.argtypes = [ctypes.c_char_p, ctypes.c_double, ctypes.c_double]
x3d.MaterialSetDiffuseColor.restype = ctypes.c_double
def MaterialSetDiffuseColor(aMtrl, aCol, aAlpha):
    return x3d.MaterialSetDiffuseColor(aMtrl, aCol, aAlpha)

x3d.MaterialSetSpecularColor.argtypes = [ctypes.c_char_p, ctypes.c_double, ctypes.c_double]
x3d.MaterialSetSpecularColor.restype = ctypes.c_double
def MaterialSetSpecularColor(aMtrl, aCol, aAlpha):
    return x3d.MaterialSetSpecularColor(aMtrl, aCol, aAlpha)

x3d.MaterialSetEmissionColor.argtypes = [ctypes.c_char_p, ctypes.c_double, ctypes.c_double]
x3d.MaterialSetEmissionColor.restype = ctypes.c_double
def MaterialSetEmissionColor(aMtrl, aCol, aAlpha):
    return x3d.MaterialSetEmissionColor(aMtrl, aCol, aAlpha)

x3d.MaterialGetColor.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialGetColor.restype = ctypes.c_double
def MaterialGetColor(aMtrl, aIndex):
    return x3d.MaterialGetColor(aMtrl, aIndex)

x3d.MaterialGetAlpha.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialGetAlpha.restype = ctypes.c_double
def MaterialGetAlpha(aMtrl, aIndex):
    return x3d.MaterialGetAlpha(aMtrl, aIndex)

x3d.MaterialSetBlendingMode.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialSetBlendingMode.restype = ctypes.c_double
def MaterialSetBlendingMode(aMtrl, aBm):
    return x3d.MaterialSetBlendingMode(aMtrl, aBm)

x3d.MaterialSetTextureMode.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialSetTextureMode.restype = ctypes.c_double
def MaterialSetTextureMode(aMtrl, aTm):
    return x3d.MaterialSetTextureMode(aMtrl, aTm)

x3d.MaterialSetTextureMappingMode.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialSetTextureMappingMode.restype = ctypes.c_double
def MaterialSetTextureMappingMode(aMtrl, aTmm):
    return x3d.MaterialSetTextureMappingMode(aMtrl, aTmm)

x3d.MaterialSetPolygonMode.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialSetPolygonMode.restype = ctypes.c_double
def MaterialSetPolygonMode(aMtrl, aPm):
    return x3d.MaterialSetPolygonMode(aMtrl, aPm)

x3d.MaterialSetTextureImageAlpha.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialSetTextureImageAlpha.restype = ctypes.c_double
def MaterialSetTextureImageAlpha(aMtrl, aTia):
    return x3d.MaterialSetTextureImageAlpha(aMtrl, aTia)

x3d.MaterialSetTextureScale.argtypes = [ctypes.c_char_p, ctypes.c_double, ctypes.c_double]
x3d.MaterialSetTextureScale.restype = ctypes.c_double
def MaterialSetTextureScale(aMtrl, aU, aV):
    return x3d.MaterialSetTextureScale(aMtrl, aU, aV)

x3d.MaterialSetTextureOffset.argtypes = [ctypes.c_char_p, ctypes.c_double, ctypes.c_double]
x3d.MaterialSetTextureOffset.restype = ctypes.c_double
def MaterialSetTextureOffset(aMtrl, aU, aV):
    return x3d.MaterialSetTextureOffset(aMtrl, aU, aV)

x3d.MaterialSetTextureFilter.argtypes = [ctypes.c_char_p, ctypes.c_double, ctypes.c_double]
x3d.MaterialSetTextureFilter.restype = ctypes.c_double
def MaterialSetTextureFilter(aMtrl, aMi, aMa):
    return x3d.MaterialSetTextureFilter(aMtrl, aMi, aMa)

x3d.MaterialEnableTexture.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialEnableTexture.restype = ctypes.c_double
def MaterialEnableTexture(aMtrl, aMode):
    return x3d.MaterialEnableTexture(aMtrl, aMode)

x3d.MaterialGetCount.argtypes = []
x3d.MaterialGetCount.restype = ctypes.c_double
def MaterialGetCount():
    return x3d.MaterialGetCount()

x3d.MaterialGetName.argtypes = [ctypes.c_double]
x3d.MaterialGetName.restype = ctypes.c_char_p
def MaterialGetName(aInd):
    return x3d.MaterialGetName(aInd)

x3d.MaterialSetFaceCulling.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialSetFaceCulling.restype = ctypes.c_double
def MaterialSetFaceCulling(aMtrl, aFc):
    return x3d.MaterialSetFaceCulling(aMtrl, aFc)

x3d.MaterialSetSecondTexture.argtypes = [ctypes.c_char_p, ctypes.c_char_p]
x3d.MaterialSetSecondTexture.restype = ctypes.c_double
def MaterialSetSecondTexture(aMtrl, aMtrl2):
    return x3d.MaterialSetSecondTexture(aMtrl, aMtrl2)

x3d.MaterialSetTextureFormat.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialSetTextureFormat.restype = ctypes.c_double
def MaterialSetTextureFormat(aMtrl, aTf):
    return x3d.MaterialSetTextureFormat(aMtrl, aTf)

x3d.MaterialSetTextureFormatEx.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialSetTextureFormatEx.restype = ctypes.c_double
def MaterialSetTextureFormatEx(aMtrl, aTfex):
    return x3d.MaterialSetTextureFormatEx(aMtrl, aTfex)

x3d.MaterialSetTextureCompression.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialSetTextureCompression.restype = ctypes.c_double
def MaterialSetTextureCompression(aMtrl, aTc):
    return x3d.MaterialSetTextureCompression(aMtrl, aTc)

x3d.MaterialTextureRequiredMemory.argtypes = [ctypes.c_char_p]
x3d.MaterialTextureRequiredMemory.restype = ctypes.c_double
def MaterialTextureRequiredMemory(aMtrl):
    return x3d.MaterialTextureRequiredMemory(aMtrl)

x3d.MaterialSetFilteringQuality.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialSetFilteringQuality.restype = ctypes.c_double
def MaterialSetFilteringQuality(aMtrl, aTf):
    return x3d.MaterialSetFilteringQuality(aMtrl, aTf)

x3d.MaterialSetShader.argtypes = [ctypes.c_char_p, ctypes.c_double]
x3d.MaterialSetShader.restype = ctypes.c_double
def MaterialSetShader(aMtrl, aShd):
    return x3d.MaterialSetShader(aMtrl, aShd)
